# chip8-emualtor

./: CMakeLists.txt  README.md
src/: chip8.cpp  chip8.h  main.cpp
